[package]
name = "nestools"
version = "1.3.2-alpha1"
authors = ["Taylor C. Richberger <Taywee@gmx.com>"]
license = 'GPL-3.0'
description = 'A set of Rust tools used to help make NES games, mostly used for tile compiling'
repository = "https://github.com/Taywee/nestools"
edition = '2018'

[dependencies]
lodepng = '2'
serde = '1'
serde_yaml = '0.8'
serde_derive = '1'
getopts = "0.2"
